<resources>
    <string name="app_name">Final Work</string>
    <string name="title_activity_lb">LBActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="friends">friends</string>
    <string name="global">global</string>
    <string name="action_edit">edit</string>
    <string name="action_friends">friends</string>
    <string name="leaderboards">Leaderboeards</string>
    <string name="profile">Profile</string>
    <string name="Friends">Friends</string>
    <string name="Multiplayer">Multiplayer</string>
    <string name="Random">Random</string>
    <string name="Choose_opponent">Choose opponent</string>
    <string name="title_activity_multiplayer">Multiplayer</string>

    //login
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_Login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Succesful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_remember_me">Remember Me</string>

    //Main
    <string name="play_button">Play</string>
    <string name="courses">Courses</string>
    <string name="action_play">Play</string>
    <string name="action_home">Home</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="AddAFriend">Add a friend</string>
    <string name="Add_a_friend">Add a friend</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_quiz_results">QuizResultsActivity</string>
    <string name="quiz_results">Quiz results</string>
    <string name="these_are_your_results">These are your results</string>
    <string name="done">Done!</string>
    <string name="Another_one">Another one!</string>
    <string name="mode">Mode</string>
    <string name="experience">Experience</string>
    <string name="course">Course</string>
    <string name="score">Score</string>
    <string name="bonus_points">Bonus points</string>
</resources>
