<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ehb.adolphe.finalwork.activities.ProfileActivity">
    <!-- <item
         android:id="@+id/action_edit"
         android:orderInCategory="100"
         android:title="@string/action_edit"
         android:icon="@drawable/ic_edit_white_24dp"
         app:showAsAction="always" /> -->
    <item
        android:id="@+id/action_play"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        android:icon="@drawable/ic_face_white_133dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="always" />
</menu>
